--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ matrix:
   fast_finish: true
   include:
   - rvm: 2.2.5
+    env: PUPPET_GEM_VERSION="~> 5.0" STRICT_VARIABLES="yes"
+  - rvm: 2.2.5
     env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
   - rvm: 2.1.6
     env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
-  - rvm: 2.1.5
-    env: PUPPET_GEM_VERSION="~> 3.0" FUTURE_PARSER="yes"
