--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,7 @@
 fixtures:
-  repositories:
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
-    docker: "https://github.com/puppetlabs/puppetlabs-docker.git" 
+  forge_modules:
+    "stdlib": 'puppetlabs-stdlib'
+    "docker": 'puppetlabs-docker'
+    "translate": 'puppetlabs-translate'
   symlinks:
     docker_ddc: "#{source_dir}"
