--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ sudo: false
 cache: bundler
 language: ruby
 bundler_args: --without development acceptance
-script: bundle exec rake test
+script: 
+  - bundle exec rake test
+  - bundle exec rubocop lib
+  - bundle exec puppet-lint --no-autoloader_layout-check manifests
 matrix:
   fast_finish: true
   include:
   - rvm: 2.2.5
-    env: PUPPET_GEM_VERSION="~> 5.0" STRICT_VARIABLES="yes"
+    env: PUPPET_GEM_VERSION="5.3.3" STRICT_VARIABLES="yes"
   - rvm: 2.2.5
     env: PUPPET_GEM_VERSION="~> 4.0" STRICT_VARIABLES="yes"
   - rvm: 2.1.6
